--- a/notebooks/testing.ipynb
+++ b/notebooks/testing.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "759f5fec",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
     "# As an Example\n",
     "# loading the resume\n",
     "\n",
-    "document = PyPDFLoader(r\"D:\\Projects\\CandidateScreeningSystem\\resumes\\Aman_ds.pdf\")\n",
+    "document = PyPDFLoader(r\"D:\\Projects\\CandidateScreeningSystem\\resumes\\AmanResume.pdf\")\n",
     "resume = document.load()"
    ]
   },
