--- a/notebooks/testing.ipynb
+++ b/notebooks/testing.ipynb
@@ -1128,7 +1128,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": "myenv (3.10.5)",
    "language": "python",
    "name": "python3"
   },
